feat[be/users]: author
